<resources>
    <string name="app_name">Network Implementation</string>
    <string name="password">Password</string>
    <string name="hello_world">Hello World</string>
    <string name="new_to_Careerlink_register_here">New to CareerLink? Register here</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="please_wait_registration_form_is_being_developed">Please wait. Registration form is being developed.</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="log_out">Log out</string>
    <string name="full_name">Full Name</string>
    <string name="register_here">Register Here</string>
    <string name="type_your_message">Type your message</string>
    <string name="send">Send</string>
    <string name="connect">Connect</string>
    <string name="your_name">Your Name</string>
    <string name="network_chat">Network Chat</string>
</resources>