<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background_register">

    <TextView
        android:id="@+id/register_textView"
        android:layout_width="164dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/brand_color_2"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:background="@drawable/text_view_background"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/linear_layout_background"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_textView">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullName_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textAlignment="center"
            android:layout_marginBottom="8dp"
            android:textColor="@color/brand_color_2"
            android:textColorHint="@color/brand_color_2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:hint="@string/full_name"
            android:inputType="text"
            android:background="@drawable/edittext_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textAlignment="center"
            android:textColor="@color/brand_color_2"
            android:textColorHint="@color/brand_color_2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/brand_color_2"
            android:textColorHint="@color/brand_color_2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textColor="@color/brand_color_2"
            android:textColorHint="@color/brand_color_2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <Button
        android:id="@+id/register_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        android:textColor="@color/light_gray"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@drawable/round_button"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/redirect_login"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginStart="64dp"
        android:background="@drawable/text_view_background"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/already_have_an_account_log_in"
        android:textColorHint="@color/brand_color_2"
        android:textColor="@color/brand_color_2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>
